--- a/Presentation/EDergi.WebPageUI/Areas/Admin/Views/Volume/Index.cshtml
+++ b/Presentation/EDergi.WebPageUI/Areas/Admin/Views/Volume/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="card-header bg-primary text-white">
                 <div class="d-flex justify-content-between align-items-center">
                     <h4 class="mb-0">Ciltler</h4>
-                    <a asp-action="Create" asp-route-magazineId="@ViewBag.MagazineId" class="btn btn-light btn-sm">
+                    <a asp-action="Create" asp-route-magazineId="@magazineId" class="btn btn-light btn-sm">
                         <i class="fas fa-plus mr-1"></i> Yeni Cilt Ekle
                     </a>
                 </div>
