--- a/Presentation/EDergi.WebPageUI/Views/Home/Index.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Home/Index.cshtml
@@ -130,6 +130,8 @@
         </div>
     </div>
 </div>
+<partial name="_MagazinesPartial" />
+
 @* 
 <!-- Hero Section start  -->
 <div class="hero-section hero-1 fix">
@@ -181,235 +183,7 @@
  *@
 
 
-<!-- Shop Section start  -->
-<section class="shop-section section-padding fix">
-    <div class="container">
-        <div class="section-title-area">
-            <div class="section-title mb- wow fadeInUp" data-wow-delay=".3s">
-                <h2>Dergiler</h2>
-            </div>
-          
-        </div>
-        <div class="book-shop-wrapper">
-            <div class="shop-box-items style-2">
-                <div class="book-thumb center">
-                    <a href="shop-details-2.html"><img src="~/WebUI-Content/web-images/book/05.png" alt="img"></a>
-                    <ul class="shop-icon d-grid justify-content-center align-items-center">
-                        <li>
-                            <a href="shop-cart.html"><i class="far fa-heart"></i></a>
-                        </li>
-                        <li>
-                            <a href="shop-cart.html">
-
-                                <img class="icon" src="~/WebUI-Content/web-images/icon/shuffle.svg" alt="svg-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="shop-details.html"><i class="far fa-eye"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-content">
-                    <h5> Design Low Book </h5>
-                    <h3><a href="shop-details.html">Flovely and Unicom <br> Erna</a></h3>
-                    <ul class="price-list">
-                        <li>$30.00</li>
-                        <li>
-                            <del>$39.99</del>
-                        </li>
-                    </ul>
-                    <ul class="author-post">
-                        <li class="authot-list">
-                            <span class="thumb">
-                                <img src="~/WebUI-Content/web-images/testimonial/client-1.png" alt="img">
-                            </span>
-                            <span class="content">(Author) Albert</span>
-                        </li>
-                        <li class="star">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-button">
-                    <a href="shop-details.html" class="theme-btn">
-                        <i class="fa-solid fa-basket-shopping"></i> Add To
-                        Cart
-                    </a>
-                </div>
-            </div>
-
-            <div class="shop-box-items style-2">
-                <div class="book-thumb center">
-                    <a href="shop-details-2.html"><img src="~/WebUI-Content/web-images/book/04.png" alt="img"></a>
-                    <ul class="post-box">
-                        <li>
-                            Hot
-                        </li>
-                    </ul>
-                    <ul class="shop-icon d-grid justify-content-center align-items-center">
-                        <li>
-                            <a href="shop-cart.html"><i class="far fa-heart"></i></a>
-                        </li>
-                        <li>
-                            <a href="shop-cart.html">
-
-                                <img class="icon" src="~/WebUI-Content/web-images/icon/shuffle.svg" alt="svg-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="shop-details.html"><i class="far fa-eye"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-content">
-                    <h5> Design Low Book </h5>
-                    <h3><a href="shop-details.html">Qple GPad With Retinay<br> Sispla</a></h3>
-                    <ul class="price-list">
-                        <li>$30.00</li>
-                        <li>
-                            <del>$39.99</del>
-                        </li>
-                    </ul>
-                    <ul class="author-post">
-                        <li class="authot-list">
-                            <span class="thumb">
-                                <img src="~/WebUI-Content/web-images/testimonial/client-2.png" alt="img">
-                            </span>
-                            <span class="content">Wilson</span>
-                        </li>
-                        <li class="star">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-button">
-                    <a href="shop-details.html" class="theme-btn">
-                        <i class="fa-solid fa-basket-shopping"></i> Add To
-                        Cart
-                    </a>
-                </div>
-            </div>
-
-            <div class="shop-box-items style-2">
-                <div class="book-thumb center">
-                    <a href="shop-details-2.html"><img src="~/WebUI-Content/web-images/book/03.png" alt="img"></a>
-                    <ul class="shop-icon d-grid justify-content-center align-items-center">
-                        <li>
-                            <a href="shop-cart.html"><i class="far fa-heart"></i></a>
-                        </li>
-                        <li>
-                            <a href="shop-cart.html">
-
-                                <img class="icon" src="~/WebUI-Content/web-images/icon/shuffle.svg" alt="svg-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="shop-details.html"><i class="far fa-eye"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-content">
-                    <h5> Design Low Book </h5>
-                    <h3><a href="shop-details.html">Simple Things You To <br> Save BOOK</a></h3>
-                    <ul class="price-list">
-                        <li>$30.00</li>
-                        <li>
-                            <del>$39.99</del>
-                        </li>
-                    </ul>
-                    <ul class="author-post">
-                        <li class="authot-list">
-                            <span class="thumb">
-                                <img src="~/WebUI-Content/web-images/testimonial/client-3.png" alt="img">
-                            </span>
-                            <span class="content">Wilson</span>
-                        </li>
-                        <li class="star">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-button">
-                    <a href="shop-details.html" class="theme-btn">
-                        <i class="fa-solid fa-basket-shopping"></i> Add To
-                        Cart
-                    </a>
-                </div>
-            </div>
-
-            <div class="shop-box-items style-2">
-                <div class="book-thumb center">
-                    <a href="shop-details-2.html"><img src="~/WebUI-Content/web-images/book/02.png" alt="img"></a>
-                    <ul class="post-box">
-                        <li>
-                            Hot
-                        </li>
-                        <li>
-                            -30%
-                        </li>
-                    </ul>
-                    <ul class="shop-icon d-grid justify-content-center align-items-center">
-                        <li>
-                            <a href="shop-cart.html"><i class="far fa-heart"></i></a>
-                        </li>
-                        <li>
-                            <a href="shop-cart.html">
-
-                                <img class="icon" src="~/WebUI-Content/web-images/icon/shuffle.svg" alt="svg-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="shop-details.html"><i class="far fa-eye"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-content">
-                    <h5> Design Low Book </h5>
-                    <h3><a href="shop-details.html">How Deal With Very <br> Bad BOOK</a></h3>
-                    <ul class="price-list">
-                        <li>$30.00</li>
-                        <li>
-                            <del>$39.99</del>
-                        </li>
-                    </ul>
-                    <ul class="author-post">
-                        <li class="authot-list">
-                            <span class="thumb">
-                                <img src="~/WebUI-Content/web-images/testimonial/client-4.png" alt="img">
-                            </span>
-                            <span class="content">Esther</span>
-                        </li>
-                        <li class="star">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-button">
-                    <a href="shop-details.html" class="theme-btn">
-                        <i class="fa-solid fa-basket-shopping"></i> Add To
-                        Cart
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+ 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
