--- a/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/_Header.cshtml
@@ -17,7 +17,7 @@
                         var currentUser = await UserManager.GetUserAsync(User);
                         <div class="dropdown d-inline">
                             <a class="dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                👤 @currentUser.FirstName
+                                 @currentUser.FirstName
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="userDropdown">
                                 <li>
