--- a/Presentation/EDergi.WebPageUI/Views/Home/Index.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "ERU Dergi - Home Page";
 }
 
+@await Component.InvokeAsync("Magazine")
+
+@*  @await Component.InvokeAsync("PriorityList", new { }) *@
 <!-- Login Modal --><div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -130,182 +133,16 @@
         </div>
     </div>
 </div>
-<partial name="_MagazinesPartial" />
 
-@* 
-<!-- Hero Section start  -->
-<div class="hero-section hero-1 fix">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-xl-8 col-lg-6">
-                <div class="hero-items">
-                    <div class="book-shape">
-                        <img src="~/WebUI-Content/web-images/hero/book.png" alt="shape-img">
-                    </div>
-                    <div class="frame-shape1 float-bob-x">
-                        <img src="~/WebUI-Content/web-images/hero/frame.png" alt="shape-img">
-                    </div>
-                    <div class="frame-shape2 float-bob-y">
-                        <img src="~/WebUI-Content/web-images/hero/frame-2.png" alt="shape-img">
-                    </div>
-                    <div class="frame-shape3">
-                        <img src="~/WebUI-Content/web-images/hero/xstar.png" alt="img">
-                    </div>
-                    <div class="frame-shape4 float-bob-x">
-                        <img src="~/WebUI-Content/web-images/hero/frame-shape.png" alt="img">
-                    </div>
-                    <div class="bg-shape1">
-                        <img src="~/WebUI-Content/web-images/hero/bg-shape.png" alt="img">
-                    </div>
-                    <div class="bg-shape2">
-                        <img src="~/WebUI-Content/web-images/hero/bg-shape2.png" alt="shape-img">
-                    </div>
-                    <div class="hero-content">
-                        <h6 class="wow fadeInUp" data-wow-delay=".3s">Up to 30% Off</h6>
-                        <h1 class="wow fadeInUp" data-wow-delay=".5s">
-                            Get Your New Book <br> With The Best Price
-                        </h1>
-                        <div class="form-clt wow fadeInUp" data-wow-delay=".9s">
-                            <button type="submit" class="theme-btn">
-                                Shop Now <i class="fa-solid fa-arrow-right-long"></i>
-                            </button>
-                        </div>
-                    </div>
 
-                </div>
-            </div>
-            <div class="col-12 col-xl-4 col-lg-6">
-              
-            </div>
-        </div>
-    </div>
-</div>
- *@
+
 
 
  
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 
 
 
 
-@* <!-- Team Section start  -->
-<section class="team-section fix section-padding pt-0 margin-bottom-30">
-    <div class="container">
-        <div class="section-title text-center">
-            <h2 class="mb-3 wow fadeInUp" data-wow-delay=".3s">Featured Author</h2>
-            <p class="wow fadeInUp" data-wow-delay=".5s">
-                Interdum et malesuada fames ac ante ipsum primis in
-                faucibus. <br> Donec at nulla nulla. Duis posuere ex lacus
-            </p>
-        </div>
-        <div class="array-button">
-            <button class="array-prev"><i class="fal fa-arrow-left"></i></button>
-            <button class="array-next"><i class="fal fa-arrow-right"></i></button>
-        </div>
-        <div class="swiper team-slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/01.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Esther Howard</a></h6>
-                            <p>10 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/02.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Shikhon Islam</a></h6>
-                            <p>07 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/03.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Kawser Ahmed</a></h6>
-                            <p>04 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/04.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Brooklyn Simmons</a></h6>
-                            <p>15 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/05.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Leslie Alexander</a></h6>
-                            <p>05 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="team-box-items">
-                        <div class="team-image">
-                            <div class="thumb">
-                                <img src="~/WebUI-Content/web-images/team/06.jpg" alt="img">
-                            </div>
-                            <div class="shape-img">
-                                <img src="~/WebUI-Content/web-images/team/shape-img.png" alt="img">
-                            </div>
-                        </div>
-                        <div class="team-content text-center">
-                            <h6><a href="team-details.html">Guy Hawkins</a></h6>
-                            <p>12 Published Books</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
- *@
