--- a/Presentation/EDergi.WebPageUI/Views/Shared/_Layout.cshtml
+++ b/Presentation/EDergi.WebPageUI/Views/Shared/_Layout.cshtml
@@ -15,10 +15,12 @@
        Erciyes Üniversitesi Dergi Takip Sistemi, Akademik Dergi Yönetimi,Makale Gönderim Sistemi,Akademik Yayın Süreci,Dergi Yayın Takvimi,Akademik Yayın Platformu,Dergi Yönetim Sistemi,Online Dergi Yönetimi,Makale Yayınlama Platformu,Üniversite Yayın Platformu,Makale Gönderim ve Yayınlama">
     <meta name="author" content="gramentheme">
     <meta name="description" content="BErciyes Üniversitesi  - E-Dergi sistemi ">
+
     <!--<< Favcion >>-->
     <link rel="shortcut icon" href="~/WebUI-Content/web-images/favicon.png">
     <!--<< Bootstrap min.css >>-->
     <link rel="stylesheet" href="~/WebUI-Content/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/WebUI-Content/css/magazine.css" />
     <!--<< All Min Css >>-->
     <link rel="stylesheet" href="~/WebUI-Content/css/all.min.css">
     <!--<< Animate.css >>-->
@@ -144,8 +146,6 @@
     <div class="offcanvas__overlay"></div>
 
     <partial name="_Header" />
-    
- 
 
     @RenderBody()
 
